2009-11-18  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        Add support for ValidityState.typeMismatch for the following INPUT types:
          date datetime datetime-local month time week
        https://bugs.webkit.org/show_bug.cgi?id=31342

        Tests: fast/forms/ValidityState-typeMismatch-date.html
               fast/forms/ValidityState-typeMismatch-datetime.html
               fast/forms/ValidityState-typeMismatch-datetimelocal.html
               fast/forms/ValidityState-typeMismatch-month.html
               fast/forms/ValidityState-typeMismatch-time.html
               fast/forms/ValidityState-typeMismatch-week.html

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::formStringToISODateTime): Check the type
          validity of the specified type and string using the ISODateTime class.
        * html/HTMLInputElement.h:
        * html/ValidityState.cpp:
        (WebCore::ValidityState::typeMismatch): Check the type validity
          for date, datetime, datetime-local, month, time and week with
          HTMLInputElemtn::formStringToISODateTime()

2009-11-18  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver Hunt.

        Fix REGRESSION (r47022): Performance of DocumentFragment.appendChild is 1000x slower sometimes
        https://bugs.webkit.org/show_bug.cgi?id=31237
        
        Also speeds up Dromaeo DOM Core tests by 1.31x.

        * bindings/js/JSNodeCustom.cpp:
        (WebCore::JSNode::markChildren): Change marking algorithm to avoid O(N^2) behavior. The subtree
        mark bit was no longer effective; instead I changed things so only a node that has no ancestors
        with wrappers would do marking; there should be only one in the typical case (the root of the
        detached subtree).
        * dom/Node.cpp:
        (WebCore::Node::Node): Remove now useless m_inSubtreeMark bit and related functions.
        * dom/Node.h: ditto

2009-11-18  Darin Adler  <darin@apple.com>
